spade-tests/src/snapshots/spade_tests__ast_lowering__comptime_pipeline_depth_missing_depth_gives_decent_error.snap
---
source: spade-tests/src/ast_lowering.rs
---
$config X = 0

pipeline($if X == 1 {3}) test(clk: clock) -> bool {
    reg*2;
        true
}


error: Missing pipeline depth
  ┌─ testinput:3:10
  │
3 │ pipeline($if X == 1 {3}) test(clk: clock) -> bool {
  │          ^^^^^^^^^^^^^^ Missing pipeline depth
  │
  = note: The current comptime branch does not specify a depth


